...
        actions: [
          IconButton(
            onPressed: () {
              context.push('/profile');
            },
            icon: const Icon(Icons.account_circle),
            tooltip: 'My Profile',
          ),
        ],
        centerTitle: true,
        title: Text(title),
      ),
      body: body,
...
